--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tictactoe">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TicTacToe">
-        <activity android:name=".blog"></activity>
+        <activity android:name=".home"></activity>
+        <activity android:name=".loose" />
+        <activity android:name=".congratulation" />
+        <activity android:name=".blog" />
         <activity android:name=".login_activity" />
         <activity android:name=".register_activity" />
         <activity
